--- a/ui-client/product-dashboard-react/package.json
+++ b/ui-client/product-dashboard-react/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --mode development",
+    "test": "jest",
     "build": "webpack --mode production",
     "clean": "rm -rf dist"
   },
@@ -24,9 +25,12 @@
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
+    "babel-jest": "^30.1.2",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.4",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "style-loader": "^4.0.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
